<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_genre_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/movieDirector"
        app:layout_constraintTop_toBottomOf="@+id/movieDirector" />

    <TextView
        android:id="@+id/movieDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_description_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/movieGenre"
        app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

    <TextView
        android:id="@+id/movieDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_director_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/movieTitle"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/edit_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>