<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/addMovieTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMovieTitleText" />

    <EditText
        android:id="@+id/addMovieGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMovieGenreText" />

    <EditText
        android:id="@+id/addMovieDirector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMovieDirectorText" />

    <EditText
        android:id="@+id/addMovieDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMovieDescriptionText" />

    <TextView
        android:id="@+id/addMovieText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_movie_text"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addMovieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_movie_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addMovieDescription"
        app:layout_constraintStart_toStartOf="@+id/addMovieDescription"
        app:layout_constraintTop_toBottomOf="@+id/addMovieDescription" />

    <TextView
        android:id="@+id/addMovieTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/movie_title_text"
        app:layout_constraintEnd_toEndOf="@+id/addMovieText"
        app:layout_constraintStart_toStartOf="@+id/addMovieText"
        app:layout_constraintTop_toBottomOf="@+id/addMovieText" />

    <TextView
        android:id="@+id/addMovieGenreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_genre_text"
        app:layout_constraintEnd_toEndOf="@+id/addMovieDirector"
        app:layout_constraintStart_toStartOf="@+id/addMovieDirector"
        app:layout_constraintTop_toBottomOf="@+id/addMovieDirector" />

    <TextView
        android:id="@+id/addMovieDirectorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_director_text"
        app:layout_constraintEnd_toEndOf="@+id/addMovieTitle"
        app:layout_constraintStart_toStartOf="@+id/addMovieTitle"
        app:layout_constraintTop_toBottomOf="@+id/addMovieTitle" />

    <TextView
        android:id="@+id/addMovieDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_description_text"
        app:layout_constraintEnd_toEndOf="@+id/addMovieGenre"
        app:layout_constraintStart_toStartOf="@+id/addMovieGenre"
        app:layout_constraintTop_toBottomOf="@+id/addMovieGenre" />
</androidx.constraintlayout.widget.ConstraintLayout>